<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">>

    <string name="app_name">MoGakRun</string>

    <string name="text_empty" />

    <!-- 바텀네비게이션 -->
    <string name="bottom_navigation_menu_community">커뮤니티</string>
    <string name="bottom_navigation_menu_running">러닝</string>
    <string name="bottom_navigation_menu_my_run">마이런</string>

    <!-- 러닝 탭 화면 -->
    <string name="runner_start_runner_unit">명</string>
    <string name="runner_start_prefix">지금,</string>
    <string name="runner_start_suffix">함께 달리고 있습니다</string>
    <string name="runner_start_button_text">달리기</string>
    <string name="running_start_thumbnail_des">모각런 썸네일</string>
    <string name="running_start_turn_on_gps">gps 켜주세요</string>

    <!-- 커뮤니티 탭 화면 -->
    <string name="text_board">게시판</string>
    <string name="text_my_group">내 그룹</string>
    <string name="text_my_post">내가 쓴 글</string>
    <string name="text_community">커뮤니티</string>
    <string name="network_connection_alert">네트워크 상태를 확인해주세요.</string>
    <string name="community_create_running_post_title">인증글 작성</string>
    <string name="community_label_running_history">운동 내역</string>
    <string name="community_select_running_history_title">운동 내역 선택</string>
    <string name="community_select_running_history_helper_text">인증글을 작성할 운동 기록을 하나 선택하세요</string>
    <string name="community_running_post_complete">인증글 작성 완료</string>
    <string name="community_select_running_history">운동 내역 선택 완료</string>
    <string name="community_select_running_history_snack_bar">운동을 하나 선택해주세요!</string>
    <string name="community_go_to_create_running_post">인증글 생성하러 가기</string>
    <string name="community_warning_running_post">내용을 1글자 이상 입력하세요</string>
    <string name="text_join_group_success">그룹 가입에 성공하였습니다!</string>
    <string name="text_join_group_fail">그룹 가입에 실패하였습니다!</string>
    <string name="community_fail_create_running_post">인증글 작성에 실패했습니다</string>
    <string name="community_success_create_running_post">인증글이 등록되었습니다!</string>
    <string name="community_create_running_post_hint">인증글 내용을 입력하세요!</string>
    <string name="text_delete_post_success">게시글 삭제에 성공하였습니다!</string>
    <string name="text_delete_post_fail">게시글 삭제에 실패하였습니다!</string>
    <string name="text_check_delete_post">해당 포스트를 삭제하시겠습니까?</string>
    <string name="text_delete">삭제</string>
    <string name="text_join_group">그룹 가입하기</string>
    <string name="text_like_count">좋아요 %d개</string>
    <string name="community_click_add_rule">룰 추가 클릭</string>

    <!-- 마이런 탭 화면 -->
    <string name="my_run_tool_bar_menu_setting">설정</string>
    <string name="my_run_profile_image_description">사용자의 프로필 사진입니다</string>
    <string name="my_run_edit_nick_name_button_description">닉네임 수정 버튼입니다</string>
    <string name="my_run_edit_nick_name_dialog_description">변경할 닉네임을 입력해주세요</string>
    <string name="my_run_edit_nick_name_dialog_positive">수정</string>
    <string name="my_run_edit_nick_name_dialog_negative">취소</string>
    <string name="my_run_edit_nick_name_dialog_hint">20글자 이하로 입력해주세요</string>
    <string name="my_run_label_my_running_history">내 운동기록</string>
    <string name="my_run_year_month_indicator">%s %s</string>

    <!-- 설정 화면 -->
    <string name="setting_connected_account">연결된 계정</string>
    <string name="setting_whyranoider">왜안돼로이더</string>
    <string name="setting_service_center">고객센터</string>
    <string name="setting_privacy_policy">개인정보처리방침</string>
    <string name="setting_service_policy">서비스 이용약관</string>
    <string name="setting_open_source_license">오픈소스 라이센스</string>
    <string name="setting_log_out">로그아웃</string>

    <!-- 그룹 생성하기 화면-->
    <string name="text_group_name">그룹명</string>
    <string name="text_go_to_create_group">그룹 생성하러 가기</string>
    <string name="text_group_introduce">그룹 소개</string>
    <string name="text_duplicate_check">중복확인</string>
    <string name="text_duplicated_group_name">중복된 그룹 이름입니다. 변경해주세요!</string>
    <string name="text_un_duplicated_group_name">사용 가능한 그룹 이름입니다!</string>
    <string name="text_create_group">그룹 생성하기</string>
    <string name="text_warning_create_group">그룹명과 그룹 소개를 입력해주세요.</string>
    <string name="text_create_group_success">그룹이 생성되었습니다!</string>
    <string name="text_create_group_fail">그룹 생성에 실패하였습니다.</string>
    <string name="text_select_rule">규칙 고르기</string>

    <!-- 운동 기록 아이템 뷰 -->
    <string name="running_history_label_total_running_time">총 운동시간</string>
    <string name="running_history_value_total_running_time">%d시간 %d분</string>
    <string name="running_history_label_start_running_time">시작시간</string>
    <string name="running_history_label_finish_running_time">종료시간</string>
    <string name="running_history_label_running_distance">이동거리</string>
    <string name="running_history_value_running_distance_m">%.0fm</string>
    <string name="running_history_value_running_distance_km">%.2fkm</string>
    <string name="running_history_label_running_pace">페이스</string>
    <string name="running_history_value_running_pace">%.2fkm/h</string>

    <!-- 그룹 상세보기 화면-->
    <string name="text_headcount">%d명</string>
    <string name="text_recruit">홍보하기</string>
    <string name="text_exit_group">그룹 나가기</string>
    <string name="text_setting_group">그룹 설정</string>
    <string name="text_edit_group">그룹 수정하기</string>
    <string name="text_delete_group">그룹 삭제하기</string>
    <string name="text_cancel">취소</string>
    <string name="text_check_recruit">정말 홍보하시겠어요?</string>
    <string name="text_recruit_success">홍보 글이 작성되었습니다!</string>
    <string name="text_recruit_fail">홍보 글 작성이 실패하였습니다!</string>
    <string name="text_check_exit_group">정말 그룹을 나가시겠어요?</string>
    <string name="text_exit_group_success">그룹 나가기에 성공하였습니다!</string>
    <string name="text_exit_group_fail">그룹 나가기에 실패하였습니다!</string>

    <!-- 그룹 수정하기 화면-->
    <string name="text_edit_group_success">그룹이 수정되었습니다!</string>
    <string name="text_edit_group_fail">그룹 수정이 실패하였습니다.</string>

    <!-- 러닝 화면 -->
    <string name="running_pause_or_resume">일시정지/재개</string>
    <string name="running_total_time">운동시간</string>
    <string name="running_finish">정지</string>
    <string name="running_notification_content">모여서 각자 러닝 중!</string>
    <string name="running_notification_id">모각런</string>
    <string name="running_notification_title">달려~ 달려~</string>
    <string name="running_channel_name">활동 추적</string>
    <string name="running_channel_description">달리기 활동을 추적하는 알림 채널입니다.</string>
    <string name="running_map_location_button">🎯</string>
    <string name="running_start_progress_description">러닝 시작을 기다리고 있어요</string>

    <!-- 러닝 종료 화면 -->
    <string name="running_finish_tool_bar">러닝 종료</string>
    <string name="running_finish_positive_btn">자랑할래요</string>
    <string name="running_finish_negative_btn">괜찮아요</string>
    <string name="running_finish_progress_description">러닝 종료 화면 프로그레스바</string>
    <string name="running_finish_snackbar_content">러닝을 종료하시겠습니까?</string>
    <string name="running_finish_snackbar_action">종료하기</string>
    <string name="running_start_error_message">러닝 도중 에러가 발생했어요! 죄송해요..</string>

    <!-- 규칙 생성 시 요일 -->
    <string-array name="rule_date_array">
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
        <item>일</item>
    </string-array>

    <!-- 규칙 생성 시 시간 -->
    <string-array name="rule_hour_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <!-- 규칙 생성 시 분 -->
    <string-array name="rule_minute_array">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
    </string-array>

    <!-- 규칙 생성 다이어로그-->
    <string name="text_date">요일</string>
    <string name="text_hour">시</string>
    <string name="text_minute">분</string>
    <string name="text_confirm">확인</string>
    <string name="text_rule_picker_title">요일 및 시간을 골라주세요!!</string>
    <string name="text_invalid_rule">유효하지 않은 규칙입니다.</string>

</resources>