<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleCentered="true"
                app:title="@string/my_run_tool_bar_menu_setting"
                />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tv_label_connected_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_connected_account"
            app:layout_constraintTop_toBottomOf="@id/tool_bar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="mogakrun@gmail.com"
            app:layout_constraintTop_toTopOf="@id/tv_label_connected_account"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_connected_account"
            app:layout_constraintStart_toEndOf="@id/tv_label_connected_account"
            android:layout_marginStart="12dp"/>

        <TextView
            android:id="@+id/tv_whyranoider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_label_connected_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:paddingVertical="20dp"
            android:gravity="center"
            android:text="@string/setting_whyranoider"/>

        <TextView
            android:id="@+id/tv_service_center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_whyranoider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingVertical="20dp"
            android:gravity="center"
            android:text="@string/setting_service_center"/>

        <TextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_service_center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingVertical="20dp"
            android:gravity="center"
            android:text="@string/setting_privacy_policy"/>

        <TextView
            android:id="@+id/tv_service_policy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_privacy_policy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingVertical="20dp"
            android:gravity="center"
            android:text="@string/setting_service_policy"/>

        <TextView
            android:id="@+id/tv_open_source_license"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_service_policy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingVertical="20dp"
            android:gravity="center"
            android:text="@string/setting_open_source_license"/>

        <TextView
            android:id="@+id/tv_log_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_open_source_license"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingVertical="20dp"
            android:gravity="center"
            android:text="@string/setting_log_out"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>