<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.whyranoid.presentation.runningstart.RunningStartViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/bottom_navigation"
            layout="@layout/bottom_navigation_bar" />

        <include
            android:id="@+id/tv_network_connection"
            layout="@layout/network_conntection_alert"
            bind:networkState="@{vm.networkState}" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/width_start"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/width_end"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <ImageView
            android:id="@+id/iv_mogakrun_thumbnail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/running_start_thumbnail_des"
            android:scaleType="fitXY"
            android:src="@drawable/thumbnail_src_small"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/width_end"
            app:layout_constraintStart_toStartOf="@id/width_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_runner_count_prefix"
            style="@style/MoGakRunText.Regular.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:text="@string/runner_start_prefix"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_mogakrun_thumbnail" />

        <TextView
            android:id="@+id/tv_runner_count_number"
            style="@style/MoGakRunText.ExtraBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_runner_count_unit"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_runner_count_prefix" />

        <TextView
            android:id="@+id/tv_runner_count_unit"
            style="@style/MoGakRunText.Regular.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/runner_start_runner_unit"
            app:layout_constraintBottom_toBottomOf="@id/tv_runner_count_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/tv_runner_count_number"
            app:layout_constraintTop_toTopOf="@id/tv_runner_count_number" />

        <TextView
            android:id="@+id/tv_runner_count_suffix"
            style="@style/MoGakRunText.Regular.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:text="@string/runner_start_suffix"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_runner_count_unit" />

        <androidx.cardview.widget.CardView
            enableWithNetworkState="@{vm.networkState}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{() -> vm.onStartButtonClicked()}"
            app:cardBackgroundColor="@color/mogakrun_primary_light"
            app:cardCornerRadius="999dp"
            app:layout_constraintBottom_toBottomOf="@id/bottom_navigation"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/width_end"
            app:layout_constraintStart_toStartOf="@id/width_start"
            app:layout_constraintTop_toBottomOf="@id/tv_runner_count_suffix">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_running_start"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.66" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottie_anim_running_start"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="@id/guide_running_start"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/runing_tab_animation" />

                <TextView
                    style="@style/MoGakRunText.Regular.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/runner_start_button_text"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guide_running_start" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>