<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.whyranoid.presentation.model.UiState" />

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.whyranoid.presentation.runningfinish.RunningFinishViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/mogakrun_background"
                app:title="@string/running_finish_tool_bar"
                app:titleTextAppearance="@style/MoGakRunText.Bold.Medium" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/map_fragment_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/running_history_item"
            app:layout_constraintTop_toBottomOf="@id/tool_bar">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map_fragment"
                android:name="com.naver.maps.map.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:navermap_compassEnabled="false"
                app:navermap_locationButtonEnabled="false"
                app:navermap_rotateGesturesEnabled="false"
                app:navermap_scrollGesturesEnabled="false"
                app:navermap_stopGesturesEnabled="false"
                app:navermap_tiltGesturesEnabled="false"
                app:navermap_zoomControlEnabled="false"
                app:navermap_zoomGesturesEnabled="false" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/running_history_item"
            layout="@layout/item_running_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            app:layout_constraintBottom_toTopOf="@id/btn_positive" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:onClick="@{() -> vm.onPositiveButtonClicked()}"
            android:text="@string/running_finish_positive_btn"
            android:textAppearance="@style/MoGakRunText.Regular.Small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_negative"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:onClick="@{() -> vm.onNegativeButtonClicked()}"
            android:text="@string/running_finish_negative_btn"
            android:textAppearance="@style/MoGakRunText.Regular.Small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_positive" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>